<?xml version="1.0"?>
<package>
  <name>qt_demo</name>
  <version>0.1.0</version>
  <description>

     qt_demo

  </description>
  <maintainer email="xxx@gmail.com"> xxx </maintainer>
  <author> xxx </author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>


</package>
